--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "core-js": "^3.6.5",
     "firebase": "^8.3.2",
     "swiper": "^6.8.4",
-    "vue": "^3.2.1",
-    "vue-router": "^4.0.0-0",
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.1",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
