--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@ionic/vue-router": "^5.4.0",
     "core-js": "^3.6.5",
     "firebase": "^8.3.2",
+    "mosha-vue-toastify": "^1.0.23",
     "swiper": "^6.8.4",
     "vue": "^3.2.37",
     "vue-router": "^4.1.1",
