--- a/package.json
+++ b/package.json
@@ -17,9 +17,14 @@
     "@capacitor/status-bar": "1.0.8",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
+    "@supabase/supabase-js": "^1.35.4",
     "core-js": "^3.6.5",
+    "moment": "^2.29.4",
+    "mosha-vue-toastify": "^1.0.23",
+    "swiper": "^6.8.4",
     "vue": "^3.2.21",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@capacitor/cli": "3.6.0",
